--- a/bin/styles/less/style.less
+++ b/bin/styles/less/style.less
@@ -1,5 +1,8 @@
 @import "include/reset.less";
 @import "include/misc.less";
+@import "include/modals.less";
 @import "include/animations.less";
 @import "include/ui.less";
 @import "include/game.less";
+@import "include/map.less";
+@import "include/game-components.less";
