--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -9,7 +9,11 @@ body {
 }
 
 * {
-	-webkit-user-drag: none;
+  -webkit-touch-callout: none; 
+  -webkit-text-size-adjust: none; 
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-user-select: none; 
+  -webkit-user-drag: none;
 }
 
 ::selection {
