--- a/bin/partials/game.html
+++ b/bin/partials/game.html
@@ -1,4 +1,4 @@
-<div ng-init="init();" class="game">
+<div ng-init="init();" class="game" ng-class="{'game-ready': model.gameReady}">
 	<div class="team-panel">
 		<div ng-repeat="id in [0,1,2,3]">
 			<character-panel character="model.team[id]" disable-items="!model.team[id].alive" character-hold-action="showCharacterInfo(model.team[id]);" character-click-action="clickCharacter(model.team[id]);" main-frame="true"></character-panel>
