--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -33,6 +33,12 @@
 }
 
 .game {
+	&.game-ready {
+		.map {
+			transition: 1s top, 1s left;
+		}
+	}
+
 	.team-panel {
 		width: @character-panel-width * 2;
 		float: left;
@@ -59,7 +65,6 @@
 		.map {
 			position: absolute;
 			width: @map-tile-size * 50;
-			transition: 1s top, 1s left;
 		}
 
 		.team {
