--- a/bin/styles/less/include/animations.less
+++ b/bin/styles/less/include/animations.less
@@ -36,3 +36,12 @@
 	box-shadow: 0 0 30px 0px transparent;
  }
 }
+
+@-webkit-keyframes loading-animation {
+ 0% {
+ 	background-position: 0px;
+ }	
+ 100% {
+ 	background-position: -43px;
+ }	
+}
