--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -206,8 +206,28 @@
 	pointer-events: none;
 	z-index: 9100;
 
+	.loading-animation {
+		position: absolute;
+		top: 70%;
+		right: 50%;
+		margin-right: -100px;
+		width: 200px;
+		height: 25px;
+		border: 3px solid black;
+		border-radius: 6px;
+		opacity: 0;
+		transition: opacity 0.3s;
+		background: url('@{img-path}anim/loading.png') white;
+		-webkit-animation: loading-animation 0.4s linear;
+	    -webkit-animation-iteration-count: infinite;
+	}
+
 	&.loading-in-progress {
 		opacity: 1;
 		pointer-events: all;
+
+		.loading-animation {
+			opacity: 1;
+		}
 	}
 }
