Nice starting buttons

--- a/bin/partials/game.html
+++ b/bin/partials/game.html
@@ -26,8 +26,8 @@
 		</div>
 	</div>
 	<div class="game-over" data-ng-show="isGameOver();">
-		<div class="exit-button-wrapper">
-			<div class="exit-button" ng-click="backToMenu();">
+		<div class="big-button-wrapper">
+			<div class="big-button" ng-click="backToMenu();">
 				Back to Menu
 			</div>
 		</div>
