--- a/bin/partials/start.html
+++ b/bin/partials/start.html
@@ -1,1 +1,5 @@
-<a href="#/main-menu" class="btn-large">Start</a>
+<div class="big-button-wrapper">
+	<div class="big-button">
+		<a href="#/main-menu" class="btn-large">Start</a>
+	</div>
+</div>
