--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -16,6 +16,11 @@ body {
   -webkit-user-drag: none;
 }
 
+a, a:link, a:focus, a:visited {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 ::selection {
   background: transparent;
 }
