--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -177,19 +177,26 @@
 	z-index: 9000;
 	background: rgba(0, 0, 0, 0.4);
 
-	.exit-button-wrapper {
-		position: absolute;
-		top: 50%;
-		left: 50%;
+}
 
-		.exit-button {
-			margin-left: -50%;
-		    margin-right: 50%;
-			padding: 10px;
-			font-size: 200%;
-			background: white;
-			border: 4px solid black;
-			border-radius: 10px;
+.big-button-wrapper {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+
+	.big-button {
+		margin-left: -50%;
+	    margin-right: 50%;
+	    margin-bottom: 10px;
+		padding: 10px;
+		font-size: 200%;
+		background: white;
+		border: 4px solid black;
+		border-radius: 10px;
+
+		&[disabled] {
+			color: darkgray;
+			border-color: darkgray;
 		}
 	}
 }
