--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -4,16 +4,17 @@
 	<div class="item" ng-show="item">
 		<div class="ammo" data-ng-show="item.model.category == 'weapon'">{{item.ammo}}</div>
 		<div class="charges" data-ng-show="item.model.charges">{{item.charges}}</div>
+		<div class="quantity" data-ng-show="item.quantity">{{item.quantity}}</div>
 		<div class="reloading" ng-show="slot === 'weapon' &amp;&amp; character.isReloading();">RELOAD</div>
-		<img class="item-image" ng-src="img/items/{{item.model.category}}/{{item.model.name}}.png" />
+		<img class="item-image" ng-if="item" ng-src="img/items/{{item.model.image || (item.model.category + '/' + item.model.name)}}.png" />
 	</div>
 
 	<script type="text/ng-template" id="item-info-modal.html">
 		<div class="item-info-modal clearfix">
 			<h3>{{item.model.name}}</h3>
 			<div class="additional-info">
-				<img class="item-image" ng-src="img/items/{{item.model.category}}/{{item.model.name}}.png" />
-				<div class="recommended-skill">
+				<img class="item-image" ng-src="img/items/{{item.model.image || (item.model.category + '/' + item.model.name)}}.png" />
+				<div class="recommended-skill" ng-show="{{item.model.skill}}">
 					Recommended skill:<br/>
 					<skill-bar skill="item.model.skill" value="item.model.skillRequired"></skill-bar>
 				</div>
