--- a/bin/styles/less/include/reset.less
+++ b/bin/styles/less/include/reset.less
@@ -6,10 +6,15 @@ html, body, div, span, ul, li, a {
 
 body {
 	font-family: monospace;
-  -webkit-transform: translate3d(0, 0, 0);
-   -moz-transform: translate3d(0, 0, 0);
-   -ms-transform: translate3d(0, 0, 0);
-   transform: translate3d(0, 0, 0);
+  // -webkit-backface-visibility: hidden;
+  // -moz-backface-visibility: hidden;
+  // -ms-backface-visibility: hidden;
+  // backface-visibility: hidden;
+
+  // -webkit-perspective: 1000;
+  // -moz-perspective: 1000;
+  // -ms-perspective: 1000;
+  // perspective: 1000;
 }
 
 * {
