--- a/bin/styles/less/style.less
+++ b/bin/styles/less/style.less
@@ -6,3 +6,4 @@
 @import "include/game.less";
 @import "include/map.less";
 @import "include/game-components.less";
+@import "include/tutorial.less";
