--- a/bin/partials/directives/character-panel.html
+++ b/bin/partials/directives/character-panel.html
@@ -6,7 +6,9 @@
 		<div class="name">{{character.name}}</div>
 		<div class="health" ng-style="{height: 100 - (100 * character.health / character.maxHealth) + '%'}">{{character.health}}</div>
 	</div>
-	<item-slot slot="weapon" item="character.weapon" allowed-large="true" character="character" disabled="disableItems"></item-slot>
-	<item-slot slot="large" item="character.itemLarge" allowed-large="true" character="character" disabled="disableItems"></item-slot>
-	<item-slot slot="small" item="character.itemSmall" character="character" disabled="disableItems"></item-slot>
+	<div class="items clearfix">
+		<item-slot slot="weapon" item="character.weapon" allowed-large="true" character="character" disabled="disableItems"></item-slot>
+		<item-slot slot="large" item="character.itemLarge" allowed-large="true" character="character" disabled="disableItems"></item-slot>
+		<item-slot slot="small" item="character.itemSmall" character="character" disabled="disableItems"></item-slot>
+	</div>
 </div>
