--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -31,6 +31,11 @@
 				}
 			}
 
+			.room-type {
+				position: absolute;
+				bottom: 5px;
+			}
+
 			.animation {
 				@animation-size: @map-tile-size - 20;
 
