Tone down spawn, fix open space corridors, limit sight range to 1

--- a/bin/styles/less/include/map.less
+++ b/bin/styles/less/include/map.less
@@ -1,3 +1,13 @@
+// .map {
+// 	.tile {
+// 		opacity: 1 !important;
+
+// 		.enemy {
+// 			visibility: visible !important;
+// 		}
+// 	}
+// }
+
 .map {
 	.column {
 		float: left;
