Minor fixes/license added to package

--- a/bin/partials/directives/item-slot.html
+++ b/bin/partials/directives/item-slot.html
@@ -1,7 +1,7 @@
 <div class="item-slot {{::slot}}" ng-class="{selected: isSelected()}" ng-click="click();" ng-hold="showItemInfo();">
 	<div class="weapon-hit">BAM!</div>
 	<div class="weapon-miss">MISS!</div>
-	<div class="item" ng-show="item">
+	<div class="item">
 		<div class="ammo" data-ng-show="item.model.category == 'weapons'">{{item.ammo}}</div>
 		<div class="charges" data-ng-show="item.model.charges">{{item.charges}}</div>
 		<div class="quantity" data-ng-show="item.quantity">{{item.quantity}}</div>
