--- a/bin/styles/less/include/animations.less
+++ b/bin/styles/less/include/animations.less
@@ -1,4 +1,4 @@
-@-webkit-keyframes pulse {
+@keyframes pulse {
 @flash-start: 0px;
 @flash-end: 10px;
 @flash-dispate: 20px;
@@ -37,7 +37,7 @@
  }
 }
 
-@-webkit-keyframes loading-animation {
+@keyframes loading-animation {
  0% {
  	background-position: 0px;
  }	
