--- a/bin/styles/less/include/game-components.less
+++ b/bin/styles/less/include/game-components.less
@@ -130,6 +130,7 @@
 		    font-size: 18px;
 		    z-index: 60;
 		    -webkit-text-stroke: 1px red;
+		    text-stroke: 1px red;
 
 		    + img {
 		    	opacity: 0.3;
