--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -141,6 +141,10 @@
 
 			    -webkit-animation: pulse 2s linear;
 			    -webkit-animation-iteration-count: infinite;
+			    -moz-animation: pulse 2s linear;
+			    -moz-animation-iteration-count: infinite;
+			    animation: pulse 2s linear;
+			    animation-iteration-count: infinite;
 			}
 		}
 
@@ -240,6 +244,10 @@
 		background: url('@{img-path}anim/loading.png') white;
 		-webkit-animation: loading-animation 0.4s linear;
 	    -webkit-animation-iteration-count: infinite;
+		-moz-animation: loading-animation 0.4s linear;
+	    -moz-animation-iteration-count: infinite;
+		animation: loading-animation 0.4s linear;
+	    animation-iteration-count: infinite;
 	}
 
 	&.loading-in-progress {
