--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -106,6 +106,12 @@
 		position: relative;
 		overflow: hidden;
 
+		.top-left-info-panel {
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
 		.map {
 			.game-ready& {
 				transition: 1s top, 1s left;
