Changed ambient of the play area

--- a/bin/styles/less/include/game.less
+++ b/bin/styles/less/include/game.less
@@ -53,6 +53,7 @@
 	}
 
 	.ammo-status {
+		color: lime;
 		position: absolute;
 		top: 3px;
 		right: 3px;
@@ -102,11 +103,13 @@
 	}
 
 	.game-area {
+		background: #111;
 		height: @screen-height;
 		position: relative;
 		overflow: hidden;
 
 		.top-left-info-panel {
+			color: lime;
 			position: absolute;
 			top: 0;
 			left: 0;
